--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
   <header>
   <body>
     <hr>
-    <img src="images/headshot.jpg" alt="CT headshot" width = "20%">
+    <img src="images/headshot.png" alt="CT headshot" width = "20%">
 
     <h1><strong>Conrad R. Tavarez</strong></h1>
 <p><em>Hermosa Beach, CA | Conrad.tavarez@gmail.com | </em><a href="http://www.linkedin.com/in/karen-daoust"><em>linkedin.com/in/conradtavarez/</em></a></p>
