--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     <img src="images/headshot.png" alt="CT headshot" width = "20%">
 
     <h1><strong>Conrad R. Tavarez</strong></h1>
-<p><em>Hermosa Beach, CA | Conrad.tavarez@gmail.com | </em><a href="http://www.linkedin.com/in/karen-daoust"><em>linkedin.com/in/conradtavarez/</em></a></p>
+<p><em>Hermosa Beach, CA | Conrad.tavarez@gmail.com | </em><a href="http://www.linkedin.com/in/conradtavarez/"><em>linkedin.com/in/conradtavarez/</em></a></p>
 
 <p>Innovative, research-driven, and reliable professional with proven expertise converting data into information to significantly enhance workplace effectiveness. &nbsp;Skilled in quickly analyzing results, evaluating trends, and integrating operational efficiencies in collaboration with a cross-functional team.&nbsp; An eye for detail, and consistently motivated to approach projects and challenges with a variety of cutting-edge methods and models.</p>
 
