--- a/index.html
+++ b/index.html
@@ -1,36 +1,8 @@
-<!doctype html>
-
-<!-- this is a comment for human! -->
-
-<html lang="en">
-
-  <header>
-    <title>Conrad Tavarez's Portal</title>
-    <link rel ="stylesheet" href="css/master.css">
-    <meta name="viewport" content="width=device-width, intial-scale=1, shrink-to-fit=no">
-    <meta name="name" content="Conrad Tavarez's Portal">
-    <meta name="robots" content ="noindex, nofollow">
-  </header>
-
+<html>
+  <head>
+    <title>Face expression recognition</title>
+  </head>
   <body>
-    <img src="images/mit-deep-learning-final-12.jpg"width="35%" alt="banner">
-    <h1>Conrad Tavarez's Portal</h1>
-    <h2>About Me</h2>
-    <p>I am a Data Analyst and Researcher based in Southern California.</p>
-    <p>I have a Bachelor's degree in Political Science as well as a MS in Applied Data Science.</p>
-    <p>My work exprience has centered around using data to better understand public opinion and behavior.</p>
-
-    <h2>Credentials and Portfolio</h2>
-    <p><a href = "resume.html">My Resume</a> | <a href = "https://github.com/conradtav">My GitHub<a/></p>
-
-    <h2>Contact</h2>
-    <p>Email: <a href ="mailto:conrad.tavarez@gamil.com"> conrad.tavarez@gmail.com</a></p>
-
+    <img id="bg" width=1200px height=900px src="{{ url_for('video_feed') }}">
   </body>
-
-  <footer>
-    <hr>
-    <code>Copyright (c) 2020 Conrad Tavarez</code>
-  </footer>
-
 </html>
